Creating xontroller to adding a new admin
