# publisher/docs/swagger.json
@@ -443,7 +443,7 @@
                         }
                     },
                     "401": {
-                        "description": "unathorized",
+                        "description": "unauthorized",
                         "schema": {
                             "$ref": "#/definitions/controllers.sent"
                         }
@@ -499,7 +499,7 @@
                         }
                     },
                     "401": {
-                        "description": "unathorized",
+                        "description": "unauthorized",
                         "schema": {
                             "$ref": "#/definitions/controllers.sent"
                         }
@@ -588,13 +588,63 @@
                         }
                     },
                     "401": {
-                        "description": "unathorized",
+                        "description": "unauthorized",
                         "schema": {
                             "$ref": "#/definitions/controllers.sent"
                         }
                     },
                     "404": {
                         "description": "user dont exist",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.sent"
+                        }
+                    },
+                    "500": {
+                        "description": "internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.sent"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/admin/{userID}": {
+            "post": {
+                "description": "Create a user session and set in the response cookie.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Create admin",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user id to be promoted to admin",
+                        "name": "userID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "admin created successfully",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.sent"
+                        }
+                    },
+                    "401": {
+                        "description": "unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.sent"
+                        }
+                    },
+                    "404": {
+                        "description": "user does not exist",
                         "schema": {
                             "$ref": "#/definitions/controllers.sent"
                         }
